# fme-CityJSON

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  cityjson.db  cityjson.fmf  cityjson.sch  fmecityjson.db  fmecityjson.fmf
example_data/: geometry_template_lod3.json  mlinestring.json  mpoint.json  msurface_texture_buildings.json  multi_lod_solid_buildings.json  r2.json  solid_inner_shell_inner_ring.json  test_no_transform.json  zurich_subset.json
example_data/textures_building/: csolid_buildings.json  csurface_buildings.json  msolid_buildings.json  msurface_buildings.json  msurface_buildings_semsrf_attributes.json  solid_buildings.json  solid_buildings_lod_empty.json  solid_buildings_lod_missing.json  solid_buildings_lod_null.json  solid_buildings_metadata.json
fmecityjson/: .gitignore  Point3.cpp  Point3.h  SConscript  SConstruct  fme_cityjson.sln  fmecityjson.rc  fmecityjson.vcxproj  fmecityjson.vcxproj.filters  fmecityjsonentrypoints.cpp  fmecityjsongeometryvisitor.cpp  fmecityjsongeometryvisitor.h  fmecityjsonpriv.h  fmecityjsonreader.cpp  fmecityjsonreader.h  fmecityjsonwriter.cpp  fmecityjsonwriter.h
